--- a/client/real-estate/src/components/navbar/navbar.scss
+++ b/client/real-estate/src/components/navbar/navbar.scss
@@ -21,7 +21,7 @@ nav{
     .left{
 
         flex: 3; //60%
-
+        z-index: 999;
         display: flex;
         align-items: center;
         gap:50px;
@@ -64,16 +64,19 @@ nav{
 
         .user{
             z-index: 999;
+            // width: 50%;
             display: flex;
             align-items: center;
             font-weight: bold;
+            text-transform: capitalize;
+            gap:20px;
 
             img{
                 width: 40px;
                 height: 40px;
                 border-radius: 50%;
                 object-fit: cover;
-                margin-right: 20px;
+                // margin-right: 20px;
             }
 
             span{
@@ -105,15 +108,24 @@ nav{
             }
         }
 
-        a{
-            padding: 12px 24px;
-            margin: 20px;
+        .links{
+            z-index: 999;
+            display: flex;
+            align-items: center;
+            text-transform: capitalize;
+            justify-content: space-between;
+            a{
+                padding: 12px 24px;
+                margin: 20px;
+            }
+    
+            .register{
+                height: max-content;
+                background-color: #fece51;
+            }
         }
 
-        .register{
-            height: max-content;
-            background-color: #fece51;
-        }
+        
 
         .menuIcon{
             display: none;
