--- a/client/real-estate/src/components/searchBar/searchBar.scss
+++ b/client/real-estate/src/components/searchBar/searchBar.scss
@@ -77,20 +77,27 @@
             }
         }
 
-        button{
-            border:none;
-            cursor: pointer;
+        a{
+            flex: 1;
             background-color: #fece51;
-            flex:1; 
-            
-            @include sm{
-                padding: 10px;;
-            }
-
-            img{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+      
+            button {
+              border: none;
+              cursor: pointer;
+              background-color: #fece51;
+              
+              @include sm{
+                padding: 10px;
+              }
+              
+              img {
                 width: 24px;
                 height: 24px;
+              }
             }
-        }
+          }
     }
 }
